--- a/addon/templates/components/editor-plugins/time-overwrite-card.hbs
+++ b/addon/templates/components/editor-plugins/time-overwrite-card.hbs
@@ -1,10 +1,39 @@
-<p class="u-spacer--tiny">{{info.label}} <br>
-  <strong>{{info.plainValue}}</strong>
-</p>
+<div class="modal-dialog__header">
+  <div class="grid">
+    <div class="col--10-12">
+      <p class="u-spacer--tiny">
+        Stel nieuwe tijd in<br>
+        huidige tijd <strong>{{info.value}}</strong>
+      </p>
+    </div>
+    {{!--       <div class="col--2-12 u-align-right">
+            <a class="link--icon--close" href="#">
+            <span class="u-visually-hidden">Venster sluiten</span>
+            </a>
+            </div> --}}
+  </div>
+</div>
 
-{{#wu-button-group}}
-  {{wu-button label="Juist" size="small" isNarrow=true command="ctrl + j" commandLocation="below" onClick=(action "insert")}}
-  {{wu-button label="Negeer" size="tiny" isLink=true isDark=true isNarrow=true command="esc" commandLocation="below" onClick=null}}
-{{/wu-button-group}}
+<div class="modal-dialog__content">
+  <Input @value={{newTime}} type="time" />
+</div>
+
+<div class="modal-dialog__footer">
+  {{#wu-button-group}}
+    {{wu-button label="Vervangen"
+      onClick=(action "insert")
+      command="ctrl + j"
+      commandLocation="below"}}
+
+    {{!-- {{wu-button label="Negeer"
+      onClick=null
+      size="tiny"
+      isLink=true
+      isDark=true
+      isNarrow=true
+      command="esc"
+      commandLocation="below"}} --}}
+  {{/wu-button-group}}
+</div>
 
 {{yield}}
